# remeres-map-editor

./: .gitignore  .reviewdog.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  TODO.md  vcpkg.json
.github/workflows/: analysis-sonarcloud.yml  autofix-ci.yml  build-ubuntu.yml  build-windows-cmake.yml  build-windows-solution.yml  build-windows.yml  ci.yml  clang-lint.yml  clean-cache.yaml  reusable-build-docker.yml  reusable-build-linux.yml  reusable-build-windows.yml  reusable-checks.yml  update_vcpkg_baseline.yml
cmake/: rme.rc
data/: clients.xml  menubar.xml
data/1264/: monsters.xml  npcs.xml
data/assets/: catalog-content.json
data/creatures/: monsters.xml  npcs.xml
data/items/: items.otb  items.xml
data/materials/: brushs.xml  doodads.xml  grounds.xml  items.xml  materials.db  tilesets.xml  walls.xml
data/materials/borders/: borders.xml
data/materials/brushs/: doodads.xml  flowers.xml  grass.xml  grounds.xml  natural_products.xml  plants.xml  stones.xml  trees.xml  walls.xml
data/materials/doodads/: tree.xml
data/materials/tilesets/: addons_and_quest_items.xml  amulets.xml  architecture.xml  blank.xml  bottom.xml  common.xml  containers.xml  contest_prizes.xml  corpses.xml  creature_products.xml  decorations.xml  depots.xml  dools.xml  equipments.xml  equipments_amulets.xml  equipments_boots.xml  equipments_helmets.xml  equipments_legs.xml  equipments_rings.xml  equipments_shields.xml  exterior.xml  festive_items.xml  fluid_containers.xml  full_grounds.xml  furniture.xml  grass.xml  grounds.xml  grounds_nature.xml  helmets.xml  interior.xml  magic_fields.xml  magical_items.xml  natural_products.xml  nature.xml  nature_flowers.xml  nature_grass.xml  nature_holes.xml  nature_plants.xml  nature_stones.xml  nature_trees.xml  (+63 more)
docs/: MATERIAL_WORKBENCH-TODO.md  change-build-style-wall-catalog.md  cyclopedia-export-roadmap.md  sonarqube.md  static-data.md
docs/compiling/: compiling-on-windows-(cmake).md  compiling-on-windows-(visual-studio-solution).md
docs/superpowers/plans/: 2026-05-26-change-build-style.md  2026-05-27-all-town-corpus-exporter.md  2026-05-27-change-connected-ground-style.md  2026-05-27-city-corpus-exporter.md  2026-05-27-city-learning-extractor.md
docs/superpowers/specs/: 2026-05-26-change-build-style-design.md  2026-05-26-city-corpus-learning-design.md  2026-05-27-change-connected-ground-style-design.md  2026-05-27-city-learning-extractor-design.md  2026-05-31-change-city-style-design.md
scripts/: city_lot_generator.lua
source/: CMakeLists.txt  about_window.cpp  about_window.h  action.cpp  action.h  actions_history_window.cpp  add_item_window.cpp  add_tileset_window.cpp  application.cpp  application.h  artprovider.cpp  artprovider.h  basemap.cpp  basemap.h  beats.h  beats.hpp  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  brush_browser_grid_panel.h  brush_database.cpp  brush_database.h  brush_editor_catalog_service.cpp  brush_editor_catalog_service.h  brush_editor_model.cpp  brush_editor_model.h  brush_editor_window.cpp  brush_editor_window.h  brush_enums.h  brush_tables.cpp  carpet_brush.cpp  carpet_brush.h  change_build_style.cpp  change_build_style.h  change_build_style_window.cpp  change_build_style_window.h  change_city_style.cpp  change_city_style.h  change_city_style_window.cpp  (+235 more)
source/app/: settings.cpp  settings.h
source/flatbuffer/: kmap.fbs  kmap_generated.h
source/game/: item.cpp  items.cpp  materials.cpp  monsters.cpp  monsters.h  npcs.cpp  npcs.h
source/io/bitmap_to_map/: bitmap_to_map_converter.cpp
source/io/otbm/: iomap_otbm.cpp
source/io/xml/: house_xml_serializer.cpp  house_xml_serializer.h  spawn_xml_serializer.cpp  spawn_xml_serializer.h  zone_xml_serializer.cpp  zone_xml_serializer.h
source/kmap/: rme_item_attribute.hpp  rme_item_detail.hpp  rme_map_header.hpp  rme_tile.hpp
source/lua/: lua_dialog.cpp  lua_script.cpp
source/map/: map.cpp
source/protobuf/: CMakeLists.txt
source/rendering/: canvas_context_menu.cpp  canvas_keyboard_handlers.cpp  canvas_mouse_handlers.cpp  draw_brush.cpp  draw_tile_detail.cpp  draw_tooltips.cpp  drawing_options.h  graphics.cpp  graphics.h  map_display.cpp  map_drawer.cpp  map_drawer.h  map_window.cpp  map_window.h  sprite_appearances.cpp
source/ui/: numbertextctrl.cpp  numbertextctrl.h
source/ui/dialogs/: properties_window.cpp
source/util/: common.cpp  common.h  lua_parser.h  mkpch.cpp  mt_rand.cpp  outfit.h  threads.h
tests/city_learning/: test_extract_city_learning.py  test_model.py
tools/: generate_xml_monsters_rme.py
tools/city_learning/: README.md  __init__.py  export_blueprint_lua.py  extract_city_learning.py  generate_city_blueprint.py  model.py  requirements.txt
vcproj/Project/: RME.vcxproj  RME.vcxproj.filters
